# cascante_25255844_EE650_ws

./: .gitignore  1  Cognitive_Robotics_Project_Update.docx  Cognitive_Robotics_Project_scratchpad.docx  README.md  commands.txt  commandsUB2.txt  setup_tb3.sh
turtlebot3_house_navigation/: CMakeLists.txt  package.xml
turtlebot3_house_navigation/launch/: patrol_example_launch.py  random_spawn_house.launch.py
turtlebot3_house_navigation/maps/: house_explored.pgm  house_explored.yaml  map.pgm  map.yaml  realHOUSE_explored.pgm  realHOUSE_explored.yaml  world_explored.pgm  world_explored.yaml
turtlebot3_house_navigation/params/: config.yaml  nav2_params.yaml  rooms.yaml
turtlebot3_house_navigation/pddl/: patrol.pddl
turtlebot3_house_navigation/src/: move_action_node.cpp  patrol_action_node.cpp  patrolling_controller_node.cpp  problem_generator_node.cpp  turn_off_light_action_node.cpp
turtlebot3_house_navigation/worlds/: turtlebot3_house.world
